[gd_scene load_steps=2 format=3 uid="uid://bpns1lr50b3hr"]

[ext_resource type="Script" path="res://scripts/ui/value_selector.tres.gd" id="1_8y3h1"]

[node name="ValueSelector" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( "1_8y3h1" )
__meta__ = {
"_edit_use_anchors_": false
}
val = 0.0
display_name = ""

[node name="Panel" type="PanelContainer" parent="."]
offset_right = 1024.0
offset_bottom = 600.0
script = null

[node name="VBox" type="VBoxContainer" parent="Panel"]
offset_left = 7.0
offset_top = 7.0
offset_right = 1017.0
offset_bottom = 593.0
script = null

[node name="ValueSlider" type="HSlider" parent="Panel/VBox"]
offset_right = 1010.0
offset_bottom = 16.0
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSplit" type="HSplitContainer" parent="Panel/VBox"]
offset_top = 20.0
offset_right = 1010.0
offset_bottom = 46.0
collapsed = true
script = null

[node name="NameLabel" type="Label" parent="Panel/VBox/VSplit"]
offset_right = 88.0
offset_bottom = 26.0
text = "ValueName"
align = 2
structured_text_bidi_override_options = []
script = null

[node name="ValueLabel" type="Label" parent="Panel/VBox/VSplit"]
offset_left = 100.0
offset_right = 1010.0
offset_bottom = 26.0
text = " 50"
align = 2
structured_text_bidi_override_options = []
script = null
